--- a/IceCubesApp/Resources/Localization/Localizable.xcstrings
+++ b/IceCubesApp/Resources/Localization/Localizable.xcstrings
@@ -54910,6 +54910,17 @@
         }
       }
     },
+    "settings.other.animate-emojis" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Enable Animated Emojis"
+          }
+        }
+      }
+    },
     "settings.other.autoplay-video": {
       "localizations": {
         "be": {
