Shorten German quote action label (closes #2363)

--- a/IceCubesApp/Resources/Localization/Localizable.xcstrings
+++ b/IceCubesApp/Resources/Localization/Localizable.xcstrings
@@ -65709,7 +65709,7 @@
         "de": {
           "stringUnit": {
             "state": "translated",
-            "value": "Diesen Beitrag zitieren"
+            "value": "Zitieren"
           }
         },
         "en": {
