Add toast notification system for posting status
Introduces a ToastCenter observable for managing toast notifications and a ToastOverlayView for displaying them. Integrates toast notifications into the status posting workflow, providing user feedback for posting progress, success, and failure (with draft saving). Updates localization with new toast-related strings and refactors editor UI to use the new toast system instead of inline progress views.

--- a/IceCubesApp/Resources/Localization/Localizable.xcstrings
+++ b/IceCubesApp/Resources/Localization/Localizable.xcstrings
@@ -85400,6 +85400,57 @@
           }
         }
       }
+    },
+    "toast.posting.failure.saved-to-drafts": {
+      "extractionState": "manual",
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Saved to drafts"
+          }
+        },
+        "en-GB": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Saved to drafts"
+          }
+        }
+      }
+    },
+    "toast.posting.success.title": {
+      "extractionState": "manual",
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Post sent"
+          }
+        },
+        "en-GB": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Post sent"
+          }
+        }
+      }
+    },
+    "toast.posting.title": {
+      "extractionState": "manual",
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Posting"
+          }
+        },
+        "en-GB": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Posting"
+          }
+        }
+      }
     }
   },
   "version": "1.0"
