loc: rename media filter key to timeline.filter.hide-posts-with-media

--- a/IceCubesApp/Resources/Localization/Localizable.xcstrings
+++ b/IceCubesApp/Resources/Localization/Localizable.xcstrings
@@ -85452,7 +85452,7 @@
         }
       }
     },
-    "settings.content.media.hide-posts-with-media" : {
+    "timeline.filter.hide-posts-with-media" : {
       "localizations" : {
         "be" : {
           "stringUnit" : {
