Update Italian locale (#2424)
Co-authored-by: Thomas Ricouard <ricouard77@gmail.com>

--- a/IceCubesApp/Resources/Localization/Localizable.xcstrings
+++ b/IceCubesApp/Resources/Localization/Localizable.xcstrings
@@ -20552,6 +20552,12 @@
     },
     "Adds @ and # keys directly on the keyboard for faster mentions and hashtags." : {
       "localizations" : {
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Aggiunge i tasti @ e # alla tastiera per scrivere menzioni e hashtag più velocemente."
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -29894,6 +29900,12 @@
     },
     "Fetches all new timeline posts (up to 800) instead of only the latest 40 + manually loading the gap." : {
       "localizations" : {
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Carica tutti i nuovi post delle timeline (fino a 800) invece che solo gli ultimi 40 + i restanti manualmente."
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -32306,6 +32318,12 @@
     },
     "Full timeline fetch" : {
       "localizations" : {
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Caricamento completo timeline"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -34364,6 +34382,12 @@
     },
     "Keeps your home timeline up to date in real time using streaming when available. Disable in case of performance issues." : {
       "localizations" : {
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mantiene la home aggiornata in tempo reale utilizzando lo streaming quando disponibile. Disattiva in caso di problemi di prestazioni."
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -37150,6 +37174,12 @@
     },
     "Metrics" : {
       "localizations" : {
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Statistiche"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -37722,6 +37752,12 @@
             "value" : "Moderated accounts"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Account moderati"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -37743,6 +37779,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Limited by server moderators"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Limitati dai moderatori dei server"
           }
         },
         "es" : {
@@ -37887,6 +37929,12 @@
             "value" : "Created within the past 30 days"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Creati negli ultimi 30 giorni"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -38027,6 +38075,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "And following you for less than 3 days"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "E che ti seguono da meno di 3 giorni"
           }
         },
         "es" : {
@@ -38171,6 +38225,12 @@
             "value" : "Until you manually approve them"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Finché non li approvi manualmente"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -38311,6 +38371,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Unless it's in reply to your own mention or if you follow the sender"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "A meno che non sia una risposta a una tua menzione o se segui il mittente"
           }
         },
         "es" : {
@@ -38455,6 +38521,12 @@
             "value" : "Select"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Seleziona"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -38476,6 +38548,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Select all"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Seleziona tutto"
           }
         },
         "es" : {
@@ -48791,6 +48869,12 @@
             "value" : "Animated Avatars and Headers"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Avatar e copertine animati"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -55172,6 +55256,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Enable Animated Emojis"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Abilita emoji animate"
           }
         },
         "es" : {
@@ -82322,8 +82412,8 @@
         },
         "it" : {
           "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Hide posts with media"
+            "state" : "translated",
+            "value" : "Nascondi post con contenuti multimediali"
           }
         },
         "ja" : {
@@ -84929,6 +85019,12 @@
             "value" : "Saved to drafts"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Salvato nelle bozze"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -84950,6 +85046,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Post sent"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Post inviato"
           }
         },
         "es" : {
@@ -84975,6 +85077,12 @@
             "value" : "Posting"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pubblicazione"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -84996,6 +85104,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Couldn't delete post"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Impossibile eliminare il post"
           }
         },
         "es" : {
@@ -85021,6 +85135,12 @@
             "value" : "Post deleted"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Post eliminato"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -85042,6 +85162,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Deleting post"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Elimino post"
           }
         },
         "es" : {
